# Edu

./: .gitignore  .gitmodules  CommandSpecification.py  Makefile  README.md
Projects/LocalisationDatabaseBuilder/src/: CMakeLists.txt  config_vision.yml  db.tgz  goal_interpolation.cpp  localizationDatabaseBuilder.cpp  png_grabber.cpp  test_pos_estimator.cpp  video_display.cpp  video_grabber.cpp
Projects/LocalisationDatabaseBuilder/src/db_save/: loc_db.xml
Projects/VitiTrajectories/vitirover/: CMakeLists.txt  readme
Projects/VitiTrajectories/vitirover/conf/: vitirover-motors.yml  vitirover-robot.yml
Projects/VitiTrajectories/vitirover/report/: logo.eps  rapport_algo.aux  rapport_algo.tex  rapport_algo.toc
Projects/VitiTrajectories/vitirover/src/: Camera.cpp  Camera.h  Controler.cpp  Controler.h  Controler.ui  Field.cpp  Field.h  FieldInformationWidget.cpp  FieldInformationWidget.h  FieldInformationWidget.ui  Layer.cpp  Layer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Map.cpp  Map.h  MapControlWidget.cpp  MapControlWidget.h  MapControlWidget.ui  Motor.h  Parser.cpp  Parser.h  Point.h  Robot.cpp  Robot.h  RobotInformationWidget.cpp  RobotInformationWidget.h  RobotInformationWidget.ui  Simulation.cpp  Simulation.h  SimulationViewer.cpp  SimulationViewer.h  Triple.cpp  Triple.h  main.cpp
sdk/cpp/: .gitignore  CMakeLists.txt  Makefile
sdk/cpp/example/: CMakeLists.txt  config.yml  example.cpp  main.cpp
sdk/cpp/example2014/: CMakeLists.txt  example2014.cpp
sdk/cpp/main/: Command.h  main.cpp
sdk/cpp/rhoban/commands/: .Commands.cpp.swp  Command.cpp  Command.h  Commands.cpp  Commands.h  CommandsManager.cpp  CommandsManager.h  HelpCommand.cpp  HelpCommand.h  RhobanMain.cpp  RhobanMain.h  RobotCommand.cpp  RobotCommand.h  RobotsCommand.cpp  RobotsCommand.h
sdk/cpp/rhoban/config/: Configurations.cpp  Configurations.h  LowLevelConfig.cpp  LowLevelConfig.h  Makefile.sources  MoveSchedulerConfig.cpp  MoveSchedulerConfig.h
sdk/cpp/rhoban/motors/: Makefile.sources  Motor.cpp  Motor.h  Motors.cpp  Motors.h
sdk/cpp/rhoban/robot/: Moves.cpp  Moves.h  Robot.cpp  Robot.h  Robots.cpp  Robots.h  Sensor.cpp  Sensor.h  Sensors.cpp  Sensors.h
sdk/cpp/rhoban/robot/test/: config.yml  testyaml.cpp
sdk/cpp/rhoban/vision/: Vision.cpp  Vision.hpp
sdk/cpp/src/: CMakeLists.txt  config.h
sdk/cpp/src/commandsStore/: Buffer.cpp  Buffer.h  Makefile  Message.cpp  Message.h  commandSpecification.cpp  commandSpecification.h  commandsStore.h  connection.cpp  connection.h  encodings.h  header.cpp  header.h  msg.cpp  msg.h  types.h
sdk/cpp/src/joystick/: joystick.c
sdk/cpp/src/main/: Command.cpp  Command.h  Makefile.sources  main.cpp
sdk/cpp/src/motion/: Makefile  motion.cpp  motion.h
sdk/cpp/src/motor/: commands.h
sdk/cpp/src/rhoban/communication/: Buffer.cpp  Buffer.h  CommandSpecification.cpp  CommandsStore.cpp  CommandsStore.h  Connection.cpp  Connection.h  Encodings.cpp  Encodings.h  Header.cpp  Header.h  Mailbox.cpp  Mailbox.h  MailboxEntry.cpp  MailboxEntry.h  Makefile  Makefile.sources  Message.cpp  Message.h
sdk/cpp/src/rhoban/communication/tests/: TestEncoding.h  (+2 more)
sdk/cpp/src/rhoban/config/: Configurations.cpp  Configurations.h
sdk/cpp/src/rhoban/motors/: Motor.h  Motors.cpp  Motors.h
sdk/cpp/src/rhoban/robot/: Makefile.sources  Robot.h
sdk/cpp/src/rhoban/test/: Makefile.sources  TestCommunication.cpp  TestMailbox.cpp
sdk/cpp/src/sendJoystick/: sendJoystick.cpp
sdk/cpp/src/sockets/: TCPClient.cpp  TCPClient.h  TCPClientBase.cpp  TCPClientBase.h  TCPServer.h  TCPServerClient.h
sdk/cpp/src/sockets/demo/: DemoServerClient.cpp
sdk/cpp/src/tests/: TestCase.cpp  TestCase.h  runTests.h
sdk/cpp/src/tests/tests/: TestCaseTest.cpp
sdk/cpp/src/threading/: Condition.cpp  Condition.h  Makefile.sources  Mutex.cpp  Mutex.h  Thread.cpp  Thread.h
sdk/cpp/src/threading/demo/: Demo.cpp  Makefile.sources
sdk/cpp/src/util/: Makefile.sources  time.h
sdk/cpp/src/vrpn/: TrackerClient.cpp
sdk/cpp/src/vrpn/tests/: Makefile.sources  test.cpp
sdk/cpp/testconfigs/: config.yml
sdk/cpp/testconfigs/Acroban/: megaboardSettings.xml  settings.xml
sdk/cpp/testconfigs/Acroban/ConfigFiles/: LowLevelConfig.xml  MoveSchedulerConfig.xml  MoveSchedulerConfigold.xml  joints.xml
sdk/cpp/testconfigs/Acroban/Moves/: Bonjour.graphics.xml  BonjourAsiat.graphics.xml  Bravo.graphics.xml  Cesa.graphics.xml  ClapHands.graphics.xml  ComplianceTest.graphics.xml  EquilibrageAvant.graphics.xml  EquilibrageAvantFlex.graphics.xml  EquilibrageMarcheLong.graphics.xml  EquilibrageMecaniqueLat.graphics.xml  EquilibrageMecaniqueLong.graphics.xml  EquilibragePoussee.graphics.xml  FlexionsJoypad.graphics.xml  FullRecorder.graphics.xml  Genous Flechis.graphics.xml  InteractionPublic.graphics.xml  JambesFlechies.graphics.xml  JambesTorques.graphics.xml  MechanicalGyro.graphics.xml  MechanicalStab.graphics.xml  MechanicalStabUpperBodyLongitudinal.graphics.xml  MechanicalWalk.graphics.xml  MechanicalWalk2.graphics.xml  NewMove.graphics.xml  Pousse.graphics.xml  PousseOk.graphics.xml  StimulationMarche.graphics.xml
sdk/cpp/testconfigs/Acroban/ServosPositions/: ServosPosition.xml
sdk/cpp/testconfigs/Spider/: megaboardSettings.xml  settings.xml
sdk/cpp/testconfigs/Spider/ConfigFiles/: Bras.graphics.xml  BrasTest.xml  LowLevelConfig.xml  LowLevelConfig2.xml  MoveSchedulerConfig.xml  RightHit.graphics.xml  RobotConfig2.xml  joints.xml  robot_spec.xml  settings.xml
sdk/cpp/testconfigs/Spider/Moves/: NewMove.graphics.xml  Oscil.graphics.xml  Position.graphics.xml  PositionBasse.graphics.xml  SpiderSinus.graphics.xml  SpiderSinus.xml  klkl.xml
sdk/cpp/testconfigs/Spider/Scripts/: Corée.xml
sdk/cpp/testconfigs/Spider/ServosPositions/: ServosPosition.xml
sdk/cpp/vrpn/: Makefile.sources  TrackerClient.cpp  TrackerClient.h
sdk/cpp/vrpn/tests/: test.cpp
sdk/cpp/walk/: CMakeLists.txt  CartWalk.cpp  CartWalk.h  ClockWalk.cpp  ClockWalk.h  Function.cpp  SigmabanCartWalk.cpp  SigmabanCartWalk.h  SigmabanWalk.cpp  SigmabanWalk.h  config.yml  main.cpp  walk.cpp  walk.yml  walking.cpp  walking.h
(+160 files in other folders)
